--- a/default.ini
+++ b/default.ini
@@ -1,6 +1,6 @@
 [main]
 exclusions = snapshot ฤฮสำฬลอาÛ download.ximc.ru bombardier Documents Users Sites Scan Malt
-startpath = z:\
+startpath = C:/Users/New user_2/Desktop/meridian/md_asa_server
 
 [logging]
 log_filename_good = Crawl_results_good.txt
@@ -8,5 +8,5 @@ log_filename_bad = Crawl_results_bad.txt
 
 [regexp]
 regexp_good = ^([a-z_\d])+-(\d{1,2}\.\d{1,2}\.\d{1,2})(\.[a-z\d]{1,4})?(-[a-z_\d]+(\.([\d]+|x))?(\.([\d]+|x))?)?(-\([a-z_\d]+\))?(\.(zip|7z|tar\.gz|cod|json|txt|exe|sh|rpm|jar|swu|img|bin|deb|pdf))$
-regexp_bad = ^([A-Za-z_\d])+.?(\d+\.\d+\.\d+)(.[A-Za-z\d_]+)?(.[\(\)A-Za-z_\d-]+(\.([\d]+|x))?(\.([\d]+|x))?)?(-\([a-z_\d]+\))?
+regexp_bad = ^([A-Za-zภ-฿เ-ÿ_\d])+.?(\d+\.\d+\.\d+)(.[A-Za-zภ-฿เ-ÿ\d_]+)?(.[\(\)A-Za-zภ-฿เ-ÿ_\d-]+(\.([\d]+|x))?(\.([\d]+|x))?)?(-\([a-zเ-ÿ_\d]+\))?
 
