--- a/default.ini
+++ b/default.ini
@@ -1,5 +1,5 @@
 [main]
-exclusions = snapshot ƒŒ ”Ã≈Õ“€ download.ximc.ru bombardier Documents Users Sites Scan Malt
+exclusions = snapshot –î–û–ö–£–ú–ï–ù–¢–´ download.ximc.ru bombardier Documents Users Sites Scan Malt
 startpath = C:/Users/New user_2/Desktop/meridian/md_asa_server
 
 [logging]
@@ -8,5 +8,5 @@ log_filename_bad = Crawl_results_bad.txt
 
 [regexp]
 regexp_good = ^([a-z_\d])+-(\d{1,2}\.\d{1,2}\.\d{1,2})(\.[a-z\d]{1,4})?(-[a-z_\d]+(\.([\d]+|x))?(\.([\d]+|x))?)?(-\([a-z_\d]+\))?(\.(zip|7z|tar\.gz|cod|json|txt|exe|sh|rpm|jar|swu|img|bin|deb|pdf))$
-regexp_bad = ^([A-Za-z¿-ﬂ‡-ˇ_\d])+.?(\d+\.\d+\.\d+)(.[A-Za-z¿-ﬂ‡-ˇ\d_]+)?(.[\(\)A-Za-z¿-ﬂ‡-ˇ_\d-]+(\.([\d]+|x))?(\.([\d]+|x))?)?(-\([a-z‡-ˇ_\d]+\))?
+regexp_bad = ^([A-Za-z–ê-–Ø–∞-—è_\d])+.?(\d+\.\d+\.\d+)(.[A-Za-z–ê-–Ø–∞-—è\d_]+)?(.[\(\)A-Za-z–ê-–Ø–∞-—è_\d-]+(\.([\d]+|x))?(\.([\d]+|x))?)?(-\([a-z–∞-—è_\d]+\))?
 
