--- a/default.ini
+++ b/default.ini
@@ -1,5 +1,5 @@
 [main]
-exclusions = snapshot ƒŒ ”Ã≈Õ“€ download.ximc.ru bombardier Documents Users Sites Scan Malt
+exclusions = snapshot –î–û–ö–£–ú–ï–ù–¢–´ download.ximc.ru bombardier Documents Users Sites Scan Malt
 startpath = z:\
 
 [logging]
@@ -7,6 +7,6 @@ log_filename_good = Crawl_results_good.txt
 log_filename_bad = Crawl_results_bad.txt
 
 [regexp]
-regexp_good = ^([\w\d])+-(\d+\.\d+\.\d+)+(\.[a-z\d]{1,4})?(-[a-z\d\._]+)?(\.(zip|cod|json|txt|img|7z))?$
+regexp_good = ^([a-z_\d])+-(\d{1,2}\.\d{1,2}\.\d{1,2})(\.[a-z\d]{1,4})?(-[a-z_\d]+(\.([\d]+|x))?(\.([\d]+|x))?)?(-\([a-z_\d]+\))?(\.(zip|7z|tar\.gz|cod|json|txt|exe|sh|rpm|jar|swu|img|bin|deb|pdf))$
 regexp_bad = ^([A-Za-z_\d])+.?(\d+\.\d+\.\d+)(.[A-Za-z\d_]+)?(.[\(\)A-Za-z_\d-]+(\.([\d]+|x))?(\.([\d]+|x))?)?(-\([a-z_\d]+\))?
 
